@startuml
hide empty members
interface ITradeDataProvider{
+ List<string> GetTradeData(Stream stream)
}
interface ITradeParser
{
 + List<TradeRecord> Parse(List<string> lines)
}
interface ITradeStorage
{
  + string Persist(List<TradeRecord> trades)
}

class TradeStorage {
+ string Persist(List<TradeRecord> trades)
}

class TradeDataProvider {
+ List<string> GetTradeData(Stream stream)
}
class TradeParser {
- const float LotSize = 100
+ List<TradeRecord> Parse(List<string> lines)
- static TradeRecord MapTradeDataToTradeRecord(IReadOnlyList<string> fields)
- static bool ValidateTradeData(IReadOnlyList<string> fields, int currentLine)
}

class TradeProcessor {
 - readonly ITradeParser _tradeParser;
 - readonly ITradeStorage _tradeStorage;
 - readonly ITradeDataProvider _tradeDataProvider
 + TradeProcessor(ITradeParser tradeParser, ITradeStorage tradeStorage, ITradeDataProvider tradeDataProvider)
 + void ProcessTrades(Stream stream)
}

TradeProcessor o---ITradeParser
TradeProcessor o---ITradeDataProvider
TradeProcessor o---ITradeStorage

TradeParser ...up|> ITradeParser
TradeStorage ...up|> ITradeStorage
TradeDataProvider ...up|> ITradeDataProvider

@enduml
